# mpi-handler

./: CMakeLists.txt  README.md
include/: mpi_handler.hpp
src/: CMakeLists.txt  mpi_handler.cpp
test/: CMakeLists.txt  mpi_handler.cpp  test_mpi.hpp
